[FIX] Fix broken layouting of search screen in Firefox 132

--- a/pandora-client-web/src/ui/screens/spacesSearch/spacesSearch.scss
+++ b/pandora-client-web/src/ui/screens/spacesSearch/spacesSearch.scss
@@ -5,7 +5,7 @@
 	width: 100%;
 	height: 4.5em;
 	grid-template-columns:
-		max-content 2em minmax(540px, 2fr) minmax(260px, 6fr);
+		3em 2em minmax(540px, 2fr) minmax(260px, 6fr);
 	grid-template-rows: auto;
 	align-items: center;
 	padding: 0.5em;
